# zero2prod

./: .env  Cargo.toml  configuration.yaml  makefile
.github/workflows/: rust.yml
migrations/: 20231113065607_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
